# jira-cloud-worklogger

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pypi-publish.yml
jira_time/: worklogger.py
jira_time_tracker/: worklogger.py
jira_worklogger/: worklogger.py
