[project]
name = "jira-time-tracker"
license = "MIT"
version = "1.0.0"
description = "A CLI utility to track how much time you spent on JIRA tickets"
authors = [
    {name = "Jonathan Hoffman",email = "jonathan.hoffman91@gmail.com"},
    {name = "Konrad Kleine",email = "kkleine@redhat.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jira (>=3.8.0,<4.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "halo (>=0.0.31,<0.0.32)",
]

[project.urls]
repository = "https://github.com/jonnyhoff/jira-time-tracker"
"Bug Tracker" = "https://github.com/jonnyhoff/jira-time-tracker/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jira-worklogger = "jira_time_tracker.worklogger:cli"
